definitive-guide-book/06-real-grammars/Csv.g4
grammar Csv;

file : header (NEWLINE row)*;
header : row;
row : field (',' field)* ;
field : TEXT
      | STRING
      | // matches empty field!
      ;

TEXT : ~[,"\r\n]+ ;
STRING : '"' ( '""' | ~'"' )* '"' ;

NEWLINE : '\r'? '\n' ;
